# peft-sft-lab

./: .gitignore  README.md  pyproject.toml  requirements.txt
eval_results/: qwen3_8b_pre_post.csv
eval_results/01200116/: results.csv
eval_results/consistency_20260120_000801/: consistency_report.json  consistency_report.txt
eval_results/csqa-base-vllm-20260120_004347/: metrics.json
eval_results/csqa-base-vllm-llama31-20260120_005415/: metrics.json
reports/: sweep_config_summary.json  sweep_config_summary.md
scripts/: check_adapter_consistency.py  compare_backends.py  draw_scatter.py  eval_all_vllm.py  eval_ifeval_latest_llama3_alpaca_lora_repeat1.py  eval_lora_incremental.py  eval_runs.py  launch_grid.sh  launch_one.sh  launch_refactor_runs.py  parsed_results.csv  plot_lora_alignment_batch.py  plot_spectral_surgery_figs.py  plot_u1_intralayer_oproj_vs_downproj.py  plot_u1_layer_similarity_o_down.py  run_csqa_spectral_edit_all.sh  run_llama31_lora_spectral_edit_all.py  run_lm_eval_3calib.sh  run_lm_eval_harness_spectral_edits.py  run_lora_spectral_edit_eval_llama31.py  run_refactor_lora_spectral_edit_repeat.py  train_qwen3_all_tasks.py  train_with_eval.py
src/finetune/: peft_builders.py  train_profiles.py  train_sft_peft.py  utils.py
src/finetune/data/: base.py  code_magicoder.py  csqa.py  general_alpaca.py  math_metamathqa.py  registry.py
src/peft_sft_lab.egg-info/: PKG-INFO  SOURCES.txt
svd_batch/meta-llama-Llama-2-7b-hf/: global_meta.json  global_summary.json
svd_batch/mistralai-Mistral-7B-v0.1/: global_meta.json  global_summary.json
(+59 files in other folders)
