[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "peft-sft-lab"
version = "0.1.0"
description = "Minimal PEFT SFT finetuning lab (LoRA/PiSSA/AdaLoRA/LoRA+) with sweeps and evals."
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

